--- a/user/templates/email_verification_template/email.html
+++ b/user/templates/email_verification_template/email.html
@@ -11,7 +11,10 @@
         <p>Hi {{ user.first_name }} {{ user.last_name }},</p>
         <p>Thank you for registering with Arise Court.</p>
         <p>Please click the button below to verify your email address and complete your registration.</p>
-        <a href="{{ verification_link }}" class="verify-button">Verify Email</a>
+        <a href="{{ verification_link }}" class="verify-button" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #1e90ff; color: white; text-decoration: none; border-radius: 4px;">
+    Verify Email
+</a>
+
         <p>If you did not request this, you can safely ignore this email.</p>
     </div>
     <div class="footer">
