--- a/user/templates/email_verification_template/password_reset_mail.html
+++ b/user/templates/email_verification_template/password_reset_mail.html
@@ -11,9 +11,10 @@
         <p>Hi {{ user.first_name }} {{ user.last_name }},</p>
         <p>We received a request to reset your password for your account at Arise Court.</p>
         <p>To reset your password, please click the link below:.</p>
-        <a href="{{ reset_link }}" class="verify-button" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #1e90ff; color: white; text-decoration: none; border-radius: 4px;">
-    Verify Email
-</a>
+        <a href="{{ reset_link }}" class="verify-button" target="_blank">
+         Verify Email
+        </a>
+
 
         <p>If you did not request this, you can safely ignore this email.</p>
     </div>
