--- a/user/templates/email_verification_template/booking_confirmation.html
+++ b/user/templates/email_verification_template/booking_confirmation.html
@@ -243,10 +243,10 @@
         </div>
       </div> -->
 
-      <div style="text-align: center" class="confirm_app">
+      <!-- <div style="text-align: center" class="confirm_app">
         <p>Please confirm your appointment by clicking the below.</p>
         <a href="#" class="button">CONFIRM APPOINTMENT</a>
-      </div>
+      </div> -->
 
       <div class="contact-info">
         <p>
