--- a/user/templates/email_verification_template/booking_confirmation.html
+++ b/user/templates/email_verification_template/booking_confirmation.html
@@ -210,7 +210,7 @@
         </div>
       </div>
 
-      <!-- <div class="info-grid-mobile">
+      <div class="info-grid-mobile">
         <div class="info-grid-mobile-inner">
           <div class="info-box">
             <div>
@@ -241,7 +241,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!-- <div style="text-align: center" class="confirm_app">
         <p>Please confirm your appointment by clicking the below.</p>
